adição da tabela no html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-     <h1>Bem Vindo</h1>
+     <table>
+        <thead>
+            <th>#</th>
+            <th>Nome</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Bernardo</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Hilário</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Sacuendi</td>
+            </tr>
+        </tbody>
+     </table>
 </body>
 </html>
